tests/machine/x/c/json_builtin.error
line: 0
error: cc error: exit status 1
/workspace/mochi/tests/machine/x/c/json_builtin.c: In function ‘main’:
/workspace/mochi/tests/machine/x/c/json_builtin.c:147:26: warning: passing argument 2 of ‘map_int_bool_put’ makes integer from pointer without a cast [-Wint-conversion]
  147 |   map_int_bool_put(&_t1, "a", 1);
      |                          ^~~
      |                          |
      |                          char *
/workspace/mochi/tests/machine/x/c/json_builtin.c:87:51: note: expected ‘int’ but argument is of type ‘char *’
   87 | static void map_int_bool_put(map_int_bool *m, int key, int value) {
      |                                               ~~~~^~~
/workspace/mochi/tests/machine/x/c/json_builtin.c:148:26: warning: passing argument 2 of ‘map_int_bool_put’ makes integer from pointer without a cast [-Wint-conversion]
  148 |   map_int_bool_put(&_t1, "b", 2);
      |                          ^~~
      |                          |
      |                          char *
/workspace/mochi/tests/machine/x/c/json_builtin.c:87:51: note: expected ‘int’ but argument is of type ‘char *’
   87 | static void map_int_bool_put(map_int_bool *m, int key, int value) {
      |                                               ~~~~^~~
/workspace/mochi/tests/machine/x/c/json_builtin.c:149:11: error: incompatible types when initializing type ‘int’ using type ‘map_int_bool’
  149 |   int m = _t1;
      |           ^~~

   1: #include <stdio.h>
